--- a/imdb-articles-reviews/src/Pages/welcome/welcome.css
+++ b/imdb-articles-reviews/src/Pages/welcome/welcome.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+
 }
 
 .container {
@@ -52,7 +53,8 @@
     margin-top: 10%;
 }
 
-.log-in-form h1 {
+.log-in-form h1,
+.sign-up-form h1 {
     color: black;
     font-size: 24px;
     padding: 20px;
@@ -66,5 +68,38 @@
     border: 1px solid rgb(168, 168, 168);
     width: 50%;
     outline: none;
+}
 
+.log-in-btn {
+    box-sizing: border-box;
+    color: white;
+    font-size: 14px;
+    padding: 13px;
+    border-radius: 7px;
+    border: none;
+    width: 250px;
+    outline: none;
+    background-color: rgb(56, 102, 189);
+}
+
+
+
+.sign-up-form {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+    text-align: center;
+}
+
+.sign-up-btn {
+    box-sizing: border-box;
+    color: white;
+    font-size: 14px;
+    padding: 13px;
+    border-radius: 7px;
+    border: none;
+    width: 250px;
+    outline: none;
+    background-color: rgb(56, 189, 149);
 }
