--- a/imdb-articles-reviews/src/Pages/welcome/welcome.css
+++ b/imdb-articles-reviews/src/Pages/welcome/welcome.css
@@ -8,11 +8,22 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     background-color: red;
-    background: linear-gradient(to bottom, rgb(6, 108, 100), rgb(14, 48, 122));
+    background: linear-gradient(to bottom, #066c64, #0e307a);
     width: 800px;
     height: 400px;
     margin: 10% auto;
 
+
+}
+
+.signup-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    background-color: red;
+    background: linear-gradient(to top, rgb(6, 108, 100), rgb(14, 48, 122));
+    width: 800px;
+    height: 400px;
+    margin: 10% auto;
 
 }
 
@@ -53,6 +64,14 @@
     margin-top: 10%;
 }
 
+.sign-up-form {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+    text-align: center;
+}
+
 .log-in-form h1,
 .sign-up-form h1 {
     color: black;
@@ -79,18 +98,12 @@
     border: none;
     width: 250px;
     outline: none;
-    background-color: rgb(56, 102, 189);
+    background-color: #0e307a;
 }
 
 
 
-.sign-up-form {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -60%);
-    text-align: center;
-}
+
 
 .sign-up-btn {
     box-sizing: border-box;
@@ -101,5 +114,10 @@
     border: none;
     width: 250px;
     outline: none;
-    background-color: rgb(56, 189, 149);
+    background-color: #066c64;
+}
+
+.log-in-form .text-input,
+.sign-up-form .text-input {
+    position: relative;
 }
